# ArduinoOTP

./: .gitattributes  .gitignore  .gitmodules
Firmware/: CMakeLists.txt  arduino-avr-toolchain.cmake  arduino-avr-tools.cmake  arduino-build-helper.cmake
Firmware/OTPManagerFirmware/: aes128.cpp  aes128.h  cipher.h  clock_helper.h  clock_helper_DS3231.cpp  clock_helper_DS3231.h  cmd_processor.cpp  cmd_processor.h  codegen_aggregator.cpp  codegen_aggregator.h  codegen_config.cpp  codegen_manager.h  comm_helper.cpp  comm_helper.h  configuration.h  crc8.cpp  crc8.h  debug.cpp  debug.h  eeprom_profile_manager.cpp  eeprom_profile_manager.h  eeprom_reader.cpp  eeprom_reader.h  eeprom_settings_manager.cpp  eeprom_settings_manager.h  eeprom_writer.cpp  eeprom_writer.h  gui.cpp  gui.h  gui_ssd1306_i2c.cpp  gui_ssd1306_i2c.h  helper_defines.h  lcg_random.cpp  lcg_random.h  lcgen.cpp  lcgen.h  low_power_device.h  main_loop.cpp  profile.cpp  profile.h  (+15 more)
Firmware/StandaloneAppSrc/: arduino-defines.cpp  arduino-defines.h  config.h.in  gui.cpp  main.cpp  serial.cpp  serial.h
OTPManager/: .gitattributes  .gitignore  OTPManager.sln  build-optional-deps.bat  build-optional-deps.sh  signkey.snk
OTPManager/OTPManager/: MainClass.cs  OTPManager.csproj  packages.config
OTPManager/OTPManagerApi/: OTPManagerApi.csproj
OTPManager/OTPManagerApi/Abstracts/: DeviceManagerBase.cs  IOTPAnswer.cs  IOTPCommand.cs  IOTPDeviceManager.cs  IOTPResponse.cs  OTPDeviceEventArgs.cs  OTPDeviceState.cs  StreamDeviceManager.cs
OTPManager/OTPManagerApi/Commands/: EmptyResponse.cs  ErrorResponse.cs  InvalidResponse.cs  NullAnswer.cs  ResponseType.cs  SetTime.cs  SetTimeCommand.cs
OTPManager/OTPManagerApi/Helpers/: AnsType.cs  Answer.cs  CRC8.cs  CommHelperBase.cs  ICommHelper.cs  LCGen.cs  PingWorker.cs  ReqType.cs  ResponseHelper.cs  ResyncHelper.cs  SerialCommHelper.cs  StreamCommHelper.cs  StreamResyncHelper.cs
OTPManager/OTPManagerApi/Properties/: AssemblyInfo.cs
OTPManager/OTPManagerApi/Protocol/: AnsType.cs  Answer.cs  ProtocolConfig.cs  ReqType.cs
OTPManager/OTPManagerApi/Serial/: SerialDeviceManager.cs  SerialProtocolConfig.cs
OTPManager/Tests/: SerialDeviceManagerTests.cs  SerialPortSafetyTests.cs  TOTPTests.cs  Test.cs  Tests.csproj
